[package]
name = "talos-audit-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aes-gcm = "0.10"
anyhow.workspace = true
lru = "0.16"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
# Only the gRPC/tonic exporter is used. `default-features = false` drops otlp's
# default http-proto + reqwest-blocking-client (opentelemetry-http + reqwest 0.13,
# a duplicate of the workspace's reqwest 0.12) for an HTTP path we never take.
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["grpc-tonic", "trace"] }
tonic = "0.14"
async-nats = "0.47"
# `default-features = false` drops aws-sdk-s3's legacy `rustls` feature
# (rustls 0.21 / rustls-webpki 0.101); the retained `default-https-client`
# keeps the modern rustls-aws-lc (rustls 0.23) stack. Must stay in lockstep
# with controller/Cargo.toml — both pull aws-sdk-s3, so a divergence would
# re-introduce the legacy feature via feature unification.
aws-config = "1.5"
aws-sdk-s3 = { version = "1.30", default-features = false, features = [
    "sigv4a",
    "default-https-client",
    "rt-tokio",
] }
chrono.workspace = true
futures = "0.3"
hex = "0.4"
hkdf = "0.12"
rand = { version = "0.8", default-features = true, features = ["std"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "json", "chrono"] }
talos-config = { path = "../talos-config" }
talos-dlp-provider = { path = "../talos-dlp-provider" }
talos-http-utils = { path = "../talos-http-utils" }
talos-text-util = { path = "../talos-text-util" }
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
