[package]
name = "talos-auth-types"
description = "Pure-data types for Talos auth: JWT claims, API-key scopes, organization roles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
