[package]
name = "talos-circuit-breaker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tracing.workspace = true

[lints]
workspace = true
