[package]
name = "talos-csrf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = { version = "0.8", features = ["json"] }
constant_time_eq = "0.3"
dashmap = "6.1"
hex = "0.4"
rand = { version = "0.8", default-features = true, features = ["std"] }
serde_json.workspace = true
talos-config = { path = "../talos-config" }
tower-cookies = "0.11"
tracing.workspace = true

[lints]
workspace = true
