[package]
name = "talos-dlp-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde_json.workspace = true
talos-config = { path = "../talos-config" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
tracing.workspace = true

[lints]
workspace = true
