[package]
name = "talos-engine-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-graphql = { version = "7.2", features = ["uuid", "chrono"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["sync"] }
uuid.workspace = true

[lints]
workspace = true
