[package]
name = "talos-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aes-gcm = "0.10"
anyhow.workspace = true
async-nats = "0.47"
async-trait = "0.1"
chrono.workspace = true
futures = "0.3"
hkdf = "0.12"
rand = { version = "0.8", default-features = true, features = ["std"] }
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager", "tls-rustls", "tls-rustls-webpki-roots", "tokio-rustls-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rhai = { version = "1.19", features = ["serde"] }
talos-dlp = { path = "../talos-dlp" }
thiserror = "2.0"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "json", "chrono"] }
talos-actor-memory-service = { path = "../talos-actor-memory-service" }
talos-actor-repository = { path = "../talos-actor-repository" }
talos-execution-repository = { path = "../talos-execution-repository" }
talos-ops-alerts-repository = { path = "../talos-ops-alerts-repository" }
talos-config = { path = "../talos-config" }
talos-public-url = { path = "../talos-public-url" }
talos-cost-attribution = { path = "../talos-cost-attribution" }
talos-dlp-provider = { path = "../talos-dlp-provider" }
talos-engine-events = { path = "../talos-engine-events" }
talos-http-utils = { path = "../talos-http-utils" }
talos-memory = { path = "../talos-memory" }
talos-ml = { path = "../talos-ml" }
talos-metrics = { path = "../talos-metrics" }
talos-analytics-repository = { path = "../talos-analytics-repository" }
talos-compilation = { path = "../talos-compilation" }
talos-module-executions = { path = "../talos-module-executions" }
talos-module-payload-encryption = { path = "../talos-module-payload-encryption" }
talos-oauth = { path = "../talos-oauth" }
talos-registry = { path = "../talos-registry" }
talos-retry-intelligence = { path = "../talos-retry-intelligence" }
talos-secrets-manager = { path = "../talos-secrets-manager" }
talos-text-util = { path = "../talos-text-util" }
# Phase C: load_worker_shared_key() to key the per-node checkpoint AEAD,
# matching the scheduler's completion-time checkpoint.
talos-workflow-job-protocol = { path = "../talos-workflow-job-protocol" }
talos-worker-fleet = { path = "../talos-worker-fleet" }
talos-workflow-engine = { path = "../talos-workflow-engine" }
talos-workflow-engine-core = { path = "../talos-workflow-engine-core" }
talos-workflow-engine-nats = { path = "../talos-workflow-engine-nats" }
# RFC 0010 P3 (D3b): shared InFlightSeals + the claim responder singleton wired
# into the dispatcher when TALOS_ENVELOPE_SEALING is on.
talos-envelope-seal = { path = "../talos-envelope-seal" }
talos-workflow-repository = { path = "../talos-workflow-repository" }
talos-workflow-authorization = { path = "../talos-workflow-authorization" }
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
# Only the `CancellationToken` (sync) is used — for the crash-recovery fence
# heartbeat in `fence.rs`. Matches the version the engine crate pins.
tokio-util = { version = "0.7", default-features = false }
tracing.workspace = true
uuid.workspace = true
zeroize = "1.8"

[lints]
workspace = true
