[package]
name = "talos-envelope-seal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "RFC 0010 P3 (D3b) controller-side per-execution secret-envelope sealing: in-flight seal-context store, claim handler, and Redis lease for the claim/lease state machine."

[dependencies]
talos-workflow-job-protocol = { path = "../talos-workflow-job-protocol" }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
serde_json = "1"
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager", "script"] }
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
rand = "0.8"

[lints]
workspace = true
